--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Cart pricing</title>
     <link href="mini.css" rel="stylesheet">
+    <link rel="stylesheet" href="script.js">
 </head>
 <body>
 <div class="main-container animate__animated animate__pulse">
@@ -39,15 +40,15 @@
         </div>
 
         <form>
-            <label for="range-bar">
-                <input id="range-bar" type="range" min="0" max="1000" step="50" >
+            <label for="range">
+                <input id="range" type="range" min="0" max="1000" step="50" >
             </label>
         </form>
 
     </section>
     <div class="plans">
         <div class="plan animate__animated animate__bounceInLeft">
-            <h3>Enterprise</h3>
+            <h3>Intro</h3>
             <div class="plan-price">
                 <h2 class="price">$199</h2>
                 <h4> /Month</h4>
@@ -67,7 +68,7 @@
             <button class="btn" type="button"> Choose Plan</button>
         </div>
         <div class="plan animate__animated animate__bounceInLeft">
-            <h3>Enterprise</h3>
+            <h3>Base</h3>
             <div class="plan-price">
                 <h2 class="price">$199</h2>
                 <h4> /Month</h4>
@@ -87,7 +88,7 @@
             <button class="btn" type="button"> Choose Plan</button>
         </div>
         <div class="plan animate__animated animate__bounceIn ">
-            <h3>Enterprise</h3>
+            <h3>Popular</h3>
             <div class="plan-price">
                 <h2 class="price">$199</h2>
                 <h4> /Month</h4>
