--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Cart pricing</title>
     <link href="mini.css" rel="stylesheet">
-    <link rel="stylesheet" href="script.js">
+
 </head>
 <body>
 <div class="main-container animate__animated animate__pulse">
@@ -150,3 +150,5 @@
     </div>
 
     </div>
+<script src="script.js"></script>
+</body>
